--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "classnames": "^2.3.1",
+    "eslint": "^8.11.0",
+    "eslint-plugin-react": "^7.29.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
